feat: added support for sorting the chunks before sending them to the LLM.
This may reduce the amount of chunks to process, reduce costs and time until finding the element.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "chatgpt": "^5.2.5",
     "dotenv": "^16.4.5",
     "node-html-parser": "^6.1.12",
+    "string-similarity": "^4.0.4",
     "xpath": "^0.0.34"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "@types/string-similarity": "^4.0.2",
     "wordlist-english": "^1.2.1"
   }
 }
