fix: a dependency was marked as devDependency

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "dotenv": "^16.4.5",
     "node-html-parser": "^6.1.12",
     "string-similarity": "^4.0.4",
-    "xpath": "^0.0.34"
+    "xpath": "^0.0.34",
+    "wordlist-english": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
-    "@types/string-similarity": "^4.0.2",
-    "wordlist-english": "^1.2.1"
+    "@types/string-similarity": "^4.0.2"
   }
 }
