--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@xmldom/xmldom": "^0.8.10",
     "chatgpt": "^5.2.5",
-    "dotenv": "^16.4.5",
     "node-html-parser": "^6.1.12",
-    "string-similarity": "^4.0.4",
-    "xpath": "^0.0.34",
-    "wordlist-english": "^1.2.1"
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
+    "@xmldom/xmldom": "^0.8.10",
+    "xpath": "^0.0.34",
+    "dotenv": "^16.4.5",
     "@types/node": "^20.11.19",
     "@types/string-similarity": "^4.0.2"
   }
